Button update, z-index bug

--- a/src/style/costomClass.css
+++ b/src/style/costomClass.css
@@ -36,10 +36,10 @@
 }
 
 .class-item-side {
-  display:flex;
+  display: flex;
   position: absolute;
   z-index: 10;
-  background: hsla(0,0%,100%,.3);
+  background: hsla(0, 0%, 100%, 0.3);
   width: 8rem;
   top: 5.5rem;
   left: -3rem;
@@ -48,41 +48,61 @@
   transform: rotate(30deg);
 }
 
-
 .button-class {
   align-self: flex-start;
-    font-weight: 500; 
-    color: white;
-    background-color: #4b5563; 
-    padding-left: 32px; 
-    padding-right: 32px; 
-    padding-top: 16px; 
-    padding-bottom: 16px; 
-    display: flex;
-    align-items: center;
-    gap: 8px; 
-    justify-content: center;
-    width: fit-content; 
-    transition-duration: 0.5s; 
+  font-weight: 500;
+  color: white;
+  background-color: #4b5563;
+  padding-left: 32px;
+  padding-right: 32px;
+  padding-top: 16px;
+  padding-bottom: 16px;
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  justify-content: center;
+  width: fit-content;
+  transition-duration: 0.5s;
 }
 
 .button-class:hover {
-    background-color: #dc2626; 
+  background-color: #dc2626;
 }
 
 .button-class-light {
   align-self: flex-start;
-    font-weight: 500; 
-    color: black;
-    background-color: white; 
-    padding-left: 32px; 
-    padding-right: 32px; 
-    padding-top: 16px; 
-    padding-bottom: 16px; 
-    display: flex;
-    align-items: center;
-    gap: 8px; 
-    justify-content: center;
-    width: fit-content; 
-    transition-duration: 0.5s; 
+  position: relative;
+  font-weight: 500;
+  color: black;
+  background-color: white;
+  padding-left: 32px;
+  padding-right: 32px;
+  padding-top: 16px;
+  padding-bottom: 16px;
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  justify-content: center;
+  width: fit-content;
+  transition-duration: 0.5s;
+  z-index: 3;
+}
+
+.button-class-light::after {
+  content: "";
+  position: absolute;
+  width: 100%; 
+  height: 100%;
+  bottom: .7rem; 
+  left: .6rem;
+  background-color: transparent;
+  border: 2px solid #4b5563; 
+  box-sizing: border-box;
+  transition: all 0.3s ease;
+  z-index: 2;
+}
+
+.button-class-light:hover::after {
+  bottom: 0; 
+  left: 0;
 }
